linter/src/rules/snapshots/squawk_linter__rules__prefer_text_field__test_rules__adding_column_non_text.snap
---
source: linter/src/rules/prefer_text_field.rs
expression: data
---
[
    RuleViolation {
        kind: PreferTextField,
        span: Span {
            start: 7,
            len: Some(
                66,
            ),
        },
        messages: [
            Note(
                "Changing the size of a varchar field requires an ACCESS EXCLUSIVE lock.",
            ),
            Help(
                "Use a text field with a check constraint.",
            ),
        ],
    },
]
