linter/src/rules/snapshots/squawk_linter__rules__prefer_text_field__test_rules__ensure_ignored_when_new_table.snap
---
source: linter/src/rules/prefer_text_field.rs
expression: "check_sql(sql, &[RuleViolationKind::PreferTextField.to_string()])"
---
Ok(
    [
        RuleViolation {
            kind: AddingForeignKeyConstraint,
            span: Span {
                start: 488,
                len: Some(
                    184,
                ),
            },
            messages: [
                Note(
                    "Requires a table scan of the table you\'re altering and a SHARE ROW EXCLUSIVE lock on both tables, which blocks writes to both tables while your table is scanned.",
                ),
                Help(
                    "Add NOT VALID to the constraint in one transaction and then VALIDATE the constraint in a separate transaction.",
                ),
            ],
        },
    ],
)
